K1J-405: Fixed exception in welcome Populate Fmb by adding requrired module to objectMapper used in FmbStub